# beesync-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
amazing-marvin-light/: Cargo.toml  marvin-data-types.txt
amazing-marvin-light/src/: lib.rs
aw-client-light/: Cargo.toml
aw-client-light/src/: lib.rs
fatebook-rs/: Cargo.toml
fatebook-rs/src/: lib.rs
github-light/: Cargo.toml
github-light/src/: lib.rs
gpt/: Cargo.toml
gpt/src/: lib.rs
src/: category_sync.rs  clean_tube_sync.rs  clean_view_sync.rs  config.rs  fatebook_sync.rs  focusmate_sync.rs  github_sync.rs  key.rs  main.rs
