[package]
name = "amazing-marvin-light"
version = "0.1.0"
edition = "2021"

[lib]
name = "amazing_marvin_light"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "^0.12", features = ["json"] }
serde_json = "^1.0"
tokio = { version = "^1.42", features = ["full"] }
time = { version = "^0.3", features = ["serde", "parsing", "formatting", "macros"] }
thiserror = "^1.0"
