[package]
name = "fatebook-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "fatebook"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.42", features = ["full"] }
time = { version = "^0.3", features = ["serde", "parsing", "formatting", "macros"] }
